<resources>
    <string name="app_name">Discount</string>

    <string name="home">Home</string>
    <string name="coupon">Coupon</string>
    <string name="coupons">Coupons</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="store">Store</string>
    <string name="my_account">My Account</string>
    <string name="subscriptions">Subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="about_discount">About Discount</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>

    <string name="email_id">Email Id</string>
    <string name="email_address">Email address</string>
    <string name="email_address_">Email Address*</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="details">Details</string>
    <string name="redeem">Redeem</string>
    <string name="submit">Submit</string>
    <string name="country">Country</string>
    <string name="search_country">Search Country</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_no">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="done">Done</string>
    <string name="about_us">About Us</string>

    <string name="select_university">Select University</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="already_have_an_account_sign_up">Already have an account?</string>

    <string name="add_your_photo">Add your photo</string>
    <string name="create_your_account">Create your account</string>
    <string name="send">Send</string>
    <string name="forgot_your_password_">Forgot your password?</string>
    <string name="please_enter_your_registered_email_address_below_to_reset_your_password">Please enter your registered
        email address below to reset your password
    </string>

    <string name="get_your_coupon">Get your coupon</string>
    <string name="free">free</string>
    <string name="here">here</string>
    <string name="subject_">Subject*</string>
    <string name="message_">Message*</string>
    <string name="your_currently">Your currently</string>
    <string name="active">active</string>

    <string name="please_select_an_option">Please select an option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="change">Change</string>
    <string name="please_fill_details_">Please fill details.</string>
    <string name="university_name">University name</string>
    <string name="student_id">Student Id</string>
    <string name="add">Add</string>
    <string name="coupon_info">Coupon Info</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="voucher_code_">Voucher code:</string>
    <string name="valid_till_">Valid till:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="ends_in">Ends In</string>
    <string name="next_bill_date">Next Bill Date</string>
    <string name="coupons_can_be_redeemed">Coupons can be redeemed</string>
    <string name="stop_recurring">Stop Recurring</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="support">Support</string>

    <!-- Alerts on the app-->
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="invalid_email_id">Invalid email id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_current_password">Invalid current password</string>
    <string name="invalid_new_password">Invalid new password</string>
    <string name="login_successful">Login successful</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="profile_image_not_selected">Profile image not selected</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="terms_and_conditions_apply_">T&amp;C Apply*</string>
    <string name="are_you_student_">Are you student?</string>
    <string name="view_more">View More</string>
    <string name="know_more">Know More</string>
    <string name="please_select_university">Please select university</string>
    <string name="please_enter_student_id">Please enter student id</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="no_data_found">No data found</string>
    <string name="invalid_subject">Invalid subject</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="invalid_session_please_login_again">Invalid session, Please login again</string>

    <!-- Lorem Ipsum-->
    <string name="l1">What is Lorem Ipsum?</string>
    <string name="l2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="l3">OFF60</string>
    <string name="l4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="hello">Hello</string>
    <string name="world">World</string>
    <string name="devs_mail">devs@mail.com</string>
    <string name="dob">12/11/1990</string>
    <string name="mn">+1&#8211;7879464523</string>
    <string name="silver_plan">Silver Plan</string>
    <string name="l5">$250/</string>
    <string name="three_months">3 month</string>
    <string name="l6">10</string>
    <string name="l7">90 Days</string>
    <string name="coupons_can_be_redeemed_">Coupons can be redeemed:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- API keys-->
    <string name="google_maps_api_kay">AIzaSyAuOPljTSFYhL3J3U3i0S-AiCz3OabNSSg</string>
    <string name="facebook_app_id">1952618965034793</string>
    <string name="fb_login_protocol_scheme">fb1952618965034793</string>


</resources>
