<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="@dimen/dp_8">
    <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:gravity="center_vertical">
            <TextView
                    android:text="@string/silver_plan"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@color/colorText"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/l5"
                    android:gravity="center"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/three_months"
                    android:gravity="center"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
                android:text="@string/coupons_can_be_redeemed_"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/l2"
                android:gravity="start"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/btnSignUp"
                    android:text="@string/subscribe"
                    android:textAllCaps="false"
                    android:layout_gravity="end|bottom"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/meterial_button_white"
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_45"/>
        </FrameLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>