<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_0"
        android:paddingBottom="@dimen/dp_5"
        android:orientation="vertical">
    <TextView
            android:text="@string/please_select_an_option"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorText"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:fontFamily="@font/poppins_light"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:textIsSelectable="false"
            android:clickable="false"
            android:enabled="false"/>
    <TextView
            android:id="@+id/tvCamera"
            android:text="@string/camera"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:textIsSelectable="false"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground"/>
    <TextView
            android:id="@+id/tvGallery"
            android:text="@string/gallery"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:textIsSelectable="false"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground"/>
</LinearLayout>