<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:id="@+id/signInActivityRoot"
        tools:context=".views.ui.activities.SignInActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <ImageView
                    android:src="@drawable/ic_logo"
                    android:padding="@dimen/dp_30"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </FrameLayout>
        <LinearLayout
                android:focusableInTouchMode="true"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_25"
                android:orientation="vertical">
            <EditText
                    android:id="@+id/etEmailId"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/email_id"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textVisiblePassword|textEmailAddress|textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/etPassword"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/password"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword|textNoSuggestions"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_0"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    <ImageView
                            android:id="@+id/ivRememberMe"
                            android:src="@drawable/ic_inactive_check_box_ico"
                            android:layout_width="@dimen/dp_15"
                            android:layout_height="@dimen/dp_15"/>
                    <TextView
                            android:text="@string/remember_me"
                            android:paddingStart="@dimen/dp_10"
                            android:paddingEnd="@dimen/dp_10"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/sp_12"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@color/colorTextGray"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                </LinearLayout>
                <TextView
                        android:id="@+id/tvForgotPassword"
                        android:text="@string/forgot_password_"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:textSize="@dimen/sp_12"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/colorTextGray"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                    android:id="@+id/btnSignIn"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/poppins_bold"
                    android:background="@drawable/meterial_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <View
                            android:background="@drawable/a_line"
                            android:layout_width="@dimen/dp_15"
                            android:layout_height="match_parent"/>
                    <TextView
                            android:text="@string/or"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginEnd="@dimen/dp_5"
                            android:textSize="@dimen/sp_12"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/colorTextGray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <View
                            android:background="@drawable/a_line"
                            android:layout_width="@dimen/dp_15"
                            android:layout_height="match_parent"/>
                </LinearLayout>
            </FrameLayout>
            <Button
                    android:id="@+id/btnSignWithFacebook"
                    android:text="@string/sign_in_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/poppins_regular"
                    android:background="@drawable/meterial_button_fb"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_15"
                android:gravity="center">
            <TextView
                    android:textColor="@color/colorTextGray"
                    android:text="@string/dont_have_an_account_sign_up"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/poppins_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView

                    android:id="@+id/tvGoToSignUp"
                    android:textColor="@color/colorThemeYellow"
                    android:text="@string/sign_up"
                    android:paddingStart="@dimen/dp_3"
                    android:paddingEnd="@dimen/dp_3"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            android:theme="@style/AppTheme.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>